// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TrendingGraph default 1`] = `
initialize {
  "0": Object {
    "attribs": Object {
      "class": "trending_graph",
      "height": "50",
      "viewBox": "0 0 200 50",
      "width": "200",
    },
    "children": Array [
      Object {
        "attribs": Object {
          "class": "trending_graph__line",
          "fill": "none",
          "stroke-linecap": "round",
          "stroke-linejoin": "round",
        },
        "children": Array [],
        "name": "path",
        "namespace": "http://www.w3.org/2000/svg",
        "next": null,
        "parent": [Circular],
        "prev": null,
        "type": "tag",
        "x-attribsNamespace": Object {
          "class": undefined,
          "fill": undefined,
          "stroke-linecap": undefined,
          "stroke-linejoin": undefined,
        },
        "x-attribsPrefix": Object {
          "class": undefined,
          "fill": undefined,
          "stroke-linecap": undefined,
          "stroke-linejoin": undefined,
        },
      },
    ],
    "name": "svg",
    "namespace": "http://www.w3.org/2000/svg",
    "next": null,
    "parent": null,
    "prev": null,
    "root": Object {
      "attribs": Object {},
      "children": Array [
        [Circular],
      ],
      "name": "root",
      "namespace": "http://www.w3.org/1999/xhtml",
      "next": null,
      "parent": null,
      "prev": null,
      "type": "root",
      "x-attribsNamespace": Object {},
      "x-attribsPrefix": Object {},
    },
    "type": "tag",
    "x-attribsNamespace": Object {
      "class": undefined,
      "height": undefined,
      "viewBox": undefined,
      "width": undefined,
    },
    "x-attribsPrefix": Object {
      "class": undefined,
      "height": undefined,
      "viewBox": undefined,
      "width": undefined,
    },
  },
  "_root": [Circular],
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "normalizeWhitespace": false,
    "withDomLvl1": true,
    "xml": false,
  },
}
`;

exports[`TrendingGraph is loading 1`] = `
initialize {
  "0": Object {
    "attribs": Object {
      "class": "trending_graph",
      "height": "50",
      "viewBox": "0 0 200 50",
      "width": "200",
    },
    "children": Array [
      Object {
        "attribs": Object {},
        "children": Array [
          Object {
            "attribs": Object {
              "cx": "92.5",
              "cy": "25",
              "r": "5",
            },
            "children": Array [
              Object {
                "attribs": Object {
                  "attributeName": "r",
                  "begin": "0s",
                  "calcMode": "linear",
                  "dur": "1.2s",
                  "from": "5",
                  "repeatCount": "indefinite",
                  "to": "5",
                  "values": "5;3;5",
                },
                "children": Array [],
                "name": "animate",
                "namespace": "http://www.w3.org/2000/svg",
                "next": Object {
                  "attribs": Object {
                    "attributeName": "fill-opacity",
                    "begin": "0s",
                    "calcMode": "linear",
                    "dur": "1.2s",
                    "from": "0.5",
                    "repeatCount": "indefinite",
                    "to": "0.5",
                    "values": "0.5;0.2;0.5",
                  },
                  "children": Array [],
                  "name": "animate",
                  "namespace": "http://www.w3.org/2000/svg",
                  "next": null,
                  "parent": [Circular],
                  "prev": [Circular],
                  "type": "tag",
                  "x-attribsNamespace": Object {
                    "attributeName": undefined,
                    "begin": undefined,
                    "calcMode": undefined,
                    "dur": undefined,
                    "from": undefined,
                    "repeatCount": undefined,
                    "to": undefined,
                    "values": undefined,
                  },
                  "x-attribsPrefix": Object {
                    "attributeName": undefined,
                    "begin": undefined,
                    "calcMode": undefined,
                    "dur": undefined,
                    "from": undefined,
                    "repeatCount": undefined,
                    "to": undefined,
                    "values": undefined,
                  },
                },
                "parent": [Circular],
                "prev": null,
                "type": "tag",
                "x-attribsNamespace": Object {
                  "attributeName": undefined,
                  "begin": undefined,
                  "calcMode": undefined,
                  "dur": undefined,
                  "from": undefined,
                  "repeatCount": undefined,
                  "to": undefined,
                  "values": undefined,
                },
                "x-attribsPrefix": Object {
                  "attributeName": undefined,
                  "begin": undefined,
                  "calcMode": undefined,
                  "dur": undefined,
                  "from": undefined,
                  "repeatCount": undefined,
                  "to": undefined,
                  "values": undefined,
                },
              },
              Object {
                "attribs": Object {
                  "attributeName": "fill-opacity",
                  "begin": "0s",
                  "calcMode": "linear",
                  "dur": "1.2s",
                  "from": "0.5",
                  "repeatCount": "indefinite",
                  "to": "0.5",
                  "values": "0.5;0.2;0.5",
                },
                "children": Array [],
                "name": "animate",
                "namespace": "http://www.w3.org/2000/svg",
                "next": null,
                "parent": [Circular],
                "prev": Object {
                  "attribs": Object {
                    "attributeName": "r",
                    "begin": "0s",
                    "calcMode": "linear",
                    "dur": "1.2s",
                    "from": "5",
                    "repeatCount": "indefinite",
                    "to": "5",
                    "values": "5;3;5",
                  },
                  "children": Array [],
                  "name": "animate",
                  "namespace": "http://www.w3.org/2000/svg",
                  "next": [Circular],
                  "parent": [Circular],
                  "prev": null,
                  "type": "tag",
                  "x-attribsNamespace": Object {
                    "attributeName": undefined,
                    "begin": undefined,
                    "calcMode": undefined,
                    "dur": undefined,
                    "from": undefined,
                    "repeatCount": undefined,
                    "to": undefined,
                    "values": undefined,
                  },
                  "x-attribsPrefix": Object {
                    "attributeName": undefined,
                    "begin": undefined,
                    "calcMode": undefined,
                    "dur": undefined,
                    "from": undefined,
                    "repeatCount": undefined,
                    "to": undefined,
                    "values": undefined,
                  },
                },
                "type": "tag",
                "x-attribsNamespace": Object {
                  "attributeName": undefined,
                  "begin": undefined,
                  "calcMode": undefined,
                  "dur": undefined,
                  "from": undefined,
                  "repeatCount": undefined,
                  "to": undefined,
                  "values": undefined,
                },
                "x-attribsPrefix": Object {
                  "attributeName": undefined,
                  "begin": undefined,
                  "calcMode": undefined,
                  "dur": undefined,
                  "from": undefined,
                  "repeatCount": undefined,
                  "to": undefined,
                  "values": undefined,
                },
              },
            ],
            "name": "circle",
            "namespace": "http://www.w3.org/2000/svg",
            "next": Object {
              "attribs": Object {
                "cx": "102.5",
                "cy": "25",
                "fill-opacity": "0.5",
                "r": "3",
              },
              "children": Array [
                Object {
                  "attribs": Object {
                    "attributeName": "r",
                    "begin": "0s",
                    "calcMode": "linear",
                    "dur": "1.2s",
                    "from": "3",
                    "repeatCount": "indefinite",
                    "to": "3",
                    "values": "3;5;3",
                  },
                  "children": Array [],
                  "name": "animate",
                  "namespace": "http://www.w3.org/2000/svg",
                  "next": Object {
                    "attribs": Object {
                      "attributeName": "fill-opacity",
                      "begin": "0s",
                      "calcMode": "linear",
                      "dur": "1.2s",
                      "from": "0.2",
                      "repeatCount": "indefinite",
                      "to": "0.2",
                      "values": "0.2;0.5;0.2",
                    },
                    "children": Array [],
                    "name": "animate",
                    "namespace": "http://www.w3.org/2000/svg",
                    "next": null,
                    "parent": [Circular],
                    "prev": [Circular],
                    "type": "tag",
                    "x-attribsNamespace": Object {
                      "attributeName": undefined,
                      "begin": undefined,
                      "calcMode": undefined,
                      "dur": undefined,
                      "from": undefined,
                      "repeatCount": undefined,
                      "to": undefined,
                      "values": undefined,
                    },
                    "x-attribsPrefix": Object {
                      "attributeName": undefined,
                      "begin": undefined,
                      "calcMode": undefined,
                      "dur": undefined,
                      "from": undefined,
                      "repeatCount": undefined,
                      "to": undefined,
                      "values": undefined,
                    },
                  },
                  "parent": [Circular],
                  "prev": null,
                  "type": "tag",
                  "x-attribsNamespace": Object {
                    "attributeName": undefined,
                    "begin": undefined,
                    "calcMode": undefined,
                    "dur": undefined,
                    "from": undefined,
                    "repeatCount": undefined,
                    "to": undefined,
                    "values": undefined,
                  },
                  "x-attribsPrefix": Object {
                    "attributeName": undefined,
                    "begin": undefined,
                    "calcMode": undefined,
                    "dur": undefined,
                    "from": undefined,
                    "repeatCount": undefined,
                    "to": undefined,
                    "values": undefined,
                  },
                },
                Object {
                  "attribs": Object {
                    "attributeName": "fill-opacity",
                    "begin": "0s",
                    "calcMode": "linear",
                    "dur": "1.2s",
                    "from": "0.2",
                    "repeatCount": "indefinite",
                    "to": "0.2",
                    "values": "0.2;0.5;0.2",
                  },
                  "children": Array [],
                  "name": "animate",
                  "namespace": "http://www.w3.org/2000/svg",
                  "next": null,
                  "parent": [Circular],
                  "prev": Object {
                    "attribs": Object {
                      "attributeName": "r",
                      "begin": "0s",
                      "calcMode": "linear",
                      "dur": "1.2s",
                      "from": "3",
                      "repeatCount": "indefinite",
                      "to": "3",
                      "values": "3;5;3",
                    },
                    "children": Array [],
                    "name": "animate",
                    "namespace": "http://www.w3.org/2000/svg",
                    "next": [Circular],
                    "parent": [Circular],
                    "prev": null,
                    "type": "tag",
                    "x-attribsNamespace": Object {
                      "attributeName": undefined,
                      "begin": undefined,
                      "calcMode": undefined,
                      "dur": undefined,
                      "from": undefined,
                      "repeatCount": undefined,
                      "to": undefined,
                      "values": undefined,
                    },
                    "x-attribsPrefix": Object {
                      "attributeName": undefined,
                      "begin": undefined,
                      "calcMode": undefined,
                      "dur": undefined,
                      "from": undefined,
                      "repeatCount": undefined,
                      "to": undefined,
                      "values": undefined,
                    },
                  },
                  "type": "tag",
                  "x-attribsNamespace": Object {
                    "attributeName": undefined,
                    "begin": undefined,
                    "calcMode": undefined,
                    "dur": undefined,
                    "from": undefined,
                    "repeatCount": undefined,
                    "to": undefined,
                    "values": undefined,
                  },
                  "x-attribsPrefix": Object {
                    "attributeName": undefined,
                    "begin": undefined,
                    "calcMode": undefined,
                    "dur": undefined,
                    "from": undefined,
                    "repeatCount": undefined,
                    "to": undefined,
                    "values": undefined,
                  },
                },
              ],
              "name": "circle",
              "namespace": "http://www.w3.org/2000/svg",
              "next": Object {
                "attribs": Object {
                  "cx": "112.5",
                  "cy": "25",
                  "r": "5",
                },
                "children": Array [
                  Object {
                    "attribs": Object {
                      "attributeName": "r",
                      "begin": "0s",
                      "calcMode": "linear",
                      "dur": "1.2s",
                      "from": "5",
                      "repeatCount": "indefinite",
                      "to": "5",
                      "values": "5;3;5",
                    },
                    "children": Array [],
                    "name": "animate",
                    "namespace": "http://www.w3.org/2000/svg",
                    "next": Object {
                      "attribs": Object {
                        "attributeName": "fill-opacity",
                        "begin": "0s",
                        "calcMode": "linear",
                        "dur": "1.2s",
                        "from": "0.5",
                        "repeatCount": "indefinite",
                        "to": "0.5",
                        "values": "0.5;0.2;0.5",
                      },
                      "children": Array [],
                      "name": "animate",
                      "namespace": "http://www.w3.org/2000/svg",
                      "next": null,
                      "parent": [Circular],
                      "prev": [Circular],
                      "type": "tag",
                      "x-attribsNamespace": Object {
                        "attributeName": undefined,
                        "begin": undefined,
                        "calcMode": undefined,
                        "dur": undefined,
                        "from": undefined,
                        "repeatCount": undefined,
                        "to": undefined,
                        "values": undefined,
                      },
                      "x-attribsPrefix": Object {
                        "attributeName": undefined,
                        "begin": undefined,
                        "calcMode": undefined,
                        "dur": undefined,
                        "from": undefined,
                        "repeatCount": undefined,
                        "to": undefined,
                        "values": undefined,
                      },
                    },
                    "parent": [Circular],
                    "prev": null,
                    "type": "tag",
                    "x-attribsNamespace": Object {
                      "attributeName": undefined,
                      "begin": undefined,
                      "calcMode": undefined,
                      "dur": undefined,
                      "from": undefined,
                      "repeatCount": undefined,
                      "to": undefined,
                      "values": undefined,
                    },
                    "x-attribsPrefix": Object {
                      "attributeName": undefined,
                      "begin": undefined,
                      "calcMode": undefined,
                      "dur": undefined,
                      "from": undefined,
                      "repeatCount": undefined,
                      "to": undefined,
                      "values": undefined,
                    },
                  },
                  Object {
                    "attribs": Object {
                      "attributeName": "fill-opacity",
                      "begin": "0s",
                      "calcMode": "linear",
                      "dur": "1.2s",
                      "from": "0.5",
                      "repeatCount": "indefinite",
                      "to": "0.5",
                      "values": "0.5;0.2;0.5",
                    },
                    "children": Array [],
                    "name": "animate",
                    "namespace": "http://www.w3.org/2000/svg",
                    "next": null,
                    "parent": [Circular],
                    "prev": Object {
                      "attribs": Object {
                        "attributeName": "r",
                        "begin": "0s",
                        "calcMode": "linear",
                        "dur": "1.2s",
                        "from": "5",
                        "repeatCount": "indefinite",
                        "to": "5",
                        "values": "5;3;5",
                      },
                      "children": Array [],
                      "name": "animate",
                      "namespace": "http://www.w3.org/2000/svg",
                      "next": [Circular],
                      "parent": [Circular],
                      "prev": null,
                      "type": "tag",
                      "x-attribsNamespace": Object {
                        "attributeName": undefined,
                        "begin": undefined,
                        "calcMode": undefined,
                        "dur": undefined,
                        "from": undefined,
                        "repeatCount": undefined,
                        "to": undefined,
                        "values": undefined,
                      },
                      "x-attribsPrefix": Object {
                        "attributeName": undefined,
                        "begin": undefined,
                        "calcMode": undefined,
                        "dur": undefined,
                        "from": undefined,
                        "repeatCount": undefined,
                        "to": undefined,
                        "values": undefined,
                      },
                    },
                    "type": "tag",
                    "x-attribsNamespace": Object {
                      "attributeName": undefined,
                      "begin": undefined,
                      "calcMode": undefined,
                      "dur": undefined,
                      "from": undefined,
                      "repeatCount": undefined,
                      "to": undefined,
                      "values": undefined,
                    },
                    "x-attribsPrefix": Object {
                      "attributeName": undefined,
                      "begin": undefined,
                      "calcMode": undefined,
                      "dur": undefined,
                      "from": undefined,
                      "repeatCount": undefined,
                      "to": undefined,
                      "values": undefined,
                    },
                  },
                ],
                "name": "circle",
                "namespace": "http://www.w3.org/2000/svg",
                "next": null,
                "parent": [Circular],
                "prev": [Circular],
                "type": "tag",
                "x-attribsNamespace": Object {
                  "cx": undefined,
                  "cy": undefined,
                  "r": undefined,
                },
                "x-attribsPrefix": Object {
                  "cx": undefined,
                  "cy": undefined,
                  "r": undefined,
                },
              },
              "parent": [Circular],
              "prev": [Circular],
              "type": "tag",
              "x-attribsNamespace": Object {
                "cx": undefined,
                "cy": undefined,
                "fill-opacity": undefined,
                "r": undefined,
              },
              "x-attribsPrefix": Object {
                "cx": undefined,
                "cy": undefined,
                "fill-opacity": undefined,
                "r": undefined,
              },
            },
            "parent": [Circular],
            "prev": null,
            "type": "tag",
            "x-attribsNamespace": Object {
              "cx": undefined,
              "cy": undefined,
              "r": undefined,
            },
            "x-attribsPrefix": Object {
              "cx": undefined,
              "cy": undefined,
              "r": undefined,
            },
          },
          Object {
            "attribs": Object {
              "cx": "102.5",
              "cy": "25",
              "fill-opacity": "0.5",
              "r": "3",
            },
            "children": Array [
              Object {
                "attribs": Object {
                  "attributeName": "r",
                  "begin": "0s",
                  "calcMode": "linear",
                  "dur": "1.2s",
                  "from": "3",
                  "repeatCount": "indefinite",
                  "to": "3",
                  "values": "3;5;3",
                },
                "children": Array [],
                "name": "animate",
                "namespace": "http://www.w3.org/2000/svg",
                "next": Object {
                  "attribs": Object {
                    "attributeName": "fill-opacity",
                    "begin": "0s",
                    "calcMode": "linear",
                    "dur": "1.2s",
                    "from": "0.2",
                    "repeatCount": "indefinite",
                    "to": "0.2",
                    "values": "0.2;0.5;0.2",
                  },
                  "children": Array [],
                  "name": "animate",
                  "namespace": "http://www.w3.org/2000/svg",
                  "next": null,
                  "parent": [Circular],
                  "prev": [Circular],
                  "type": "tag",
                  "x-attribsNamespace": Object {
                    "attributeName": undefined,
                    "begin": undefined,
                    "calcMode": undefined,
                    "dur": undefined,
                    "from": undefined,
                    "repeatCount": undefined,
                    "to": undefined,
                    "values": undefined,
                  },
                  "x-attribsPrefix": Object {
                    "attributeName": undefined,
                    "begin": undefined,
                    "calcMode": undefined,
                    "dur": undefined,
                    "from": undefined,
                    "repeatCount": undefined,
                    "to": undefined,
                    "values": undefined,
                  },
                },
                "parent": [Circular],
                "prev": null,
                "type": "tag",
                "x-attribsNamespace": Object {
                  "attributeName": undefined,
                  "begin": undefined,
                  "calcMode": undefined,
                  "dur": undefined,
                  "from": undefined,
                  "repeatCount": undefined,
                  "to": undefined,
                  "values": undefined,
                },
                "x-attribsPrefix": Object {
                  "attributeName": undefined,
                  "begin": undefined,
                  "calcMode": undefined,
                  "dur": undefined,
                  "from": undefined,
                  "repeatCount": undefined,
                  "to": undefined,
                  "values": undefined,
                },
              },
              Object {
                "attribs": Object {
                  "attributeName": "fill-opacity",
                  "begin": "0s",
                  "calcMode": "linear",
                  "dur": "1.2s",
                  "from": "0.2",
                  "repeatCount": "indefinite",
                  "to": "0.2",
                  "values": "0.2;0.5;0.2",
                },
                "children": Array [],
                "name": "animate",
                "namespace": "http://www.w3.org/2000/svg",
                "next": null,
                "parent": [Circular],
                "prev": Object {
                  "attribs": Object {
                    "attributeName": "r",
                    "begin": "0s",
                    "calcMode": "linear",
                    "dur": "1.2s",
                    "from": "3",
                    "repeatCount": "indefinite",
                    "to": "3",
                    "values": "3;5;3",
                  },
                  "children": Array [],
                  "name": "animate",
                  "namespace": "http://www.w3.org/2000/svg",
                  "next": [Circular],
                  "parent": [Circular],
                  "prev": null,
                  "type": "tag",
                  "x-attribsNamespace": Object {
                    "attributeName": undefined,
                    "begin": undefined,
                    "calcMode": undefined,
                    "dur": undefined,
                    "from": undefined,
                    "repeatCount": undefined,
                    "to": undefined,
                    "values": undefined,
                  },
                  "x-attribsPrefix": Object {
                    "attributeName": undefined,
                    "begin": undefined,
                    "calcMode": undefined,
                    "dur": undefined,
                    "from": undefined,
                    "repeatCount": undefined,
                    "to": undefined,
                    "values": undefined,
                  },
                },
                "type": "tag",
                "x-attribsNamespace": Object {
                  "attributeName": undefined,
                  "begin": undefined,
                  "calcMode": undefined,
                  "dur": undefined,
                  "from": undefined,
                  "repeatCount": undefined,
                  "to": undefined,
                  "values": undefined,
                },
                "x-attribsPrefix": Object {
                  "attributeName": undefined,
                  "begin": undefined,
                  "calcMode": undefined,
                  "dur": undefined,
                  "from": undefined,
                  "repeatCount": undefined,
                  "to": undefined,
                  "values": undefined,
                },
              },
            ],
            "name": "circle",
            "namespace": "http://www.w3.org/2000/svg",
            "next": Object {
              "attribs": Object {
                "cx": "112.5",
                "cy": "25",
                "r": "5",
              },
              "children": Array [
                Object {
                  "attribs": Object {
                    "attributeName": "r",
                    "begin": "0s",
                    "calcMode": "linear",
                    "dur": "1.2s",
                    "from": "5",
                    "repeatCount": "indefinite",
                    "to": "5",
                    "values": "5;3;5",
                  },
                  "children": Array [],
                  "name": "animate",
                  "namespace": "http://www.w3.org/2000/svg",
                  "next": Object {
                    "attribs": Object {
                      "attributeName": "fill-opacity",
                      "begin": "0s",
                      "calcMode": "linear",
                      "dur": "1.2s",
                      "from": "0.5",
                      "repeatCount": "indefinite",
                      "to": "0.5",
                      "values": "0.5;0.2;0.5",
                    },
                    "children": Array [],
                    "name": "animate",
                    "namespace": "http://www.w3.org/2000/svg",
                    "next": null,
                    "parent": [Circular],
                    "prev": [Circular],
                    "type": "tag",
                    "x-attribsNamespace": Object {
                      "attributeName": undefined,
                      "begin": undefined,
                      "calcMode": undefined,
                      "dur": undefined,
                      "from": undefined,
                      "repeatCount": undefined,
                      "to": undefined,
                      "values": undefined,
                    },
                    "x-attribsPrefix": Object {
                      "attributeName": undefined,
                      "begin": undefined,
                      "calcMode": undefined,
                      "dur": undefined,
                      "from": undefined,
                      "repeatCount": undefined,
                      "to": undefined,
                      "values": undefined,
                    },
                  },
                  "parent": [Circular],
                  "prev": null,
                  "type": "tag",
                  "x-attribsNamespace": Object {
                    "attributeName": undefined,
                    "begin": undefined,
                    "calcMode": undefined,
                    "dur": undefined,
                    "from": undefined,
                    "repeatCount": undefined,
                    "to": undefined,
                    "values": undefined,
                  },
                  "x-attribsPrefix": Object {
                    "attributeName": undefined,
                    "begin": undefined,
                    "calcMode": undefined,
                    "dur": undefined,
                    "from": undefined,
                    "repeatCount": undefined,
                    "to": undefined,
                    "values": undefined,
                  },
                },
                Object {
                  "attribs": Object {
                    "attributeName": "fill-opacity",
                    "begin": "0s",
                    "calcMode": "linear",
                    "dur": "1.2s",
                    "from": "0.5",
                    "repeatCount": "indefinite",
                    "to": "0.5",
                    "values": "0.5;0.2;0.5",
                  },
                  "children": Array [],
                  "name": "animate",
                  "namespace": "http://www.w3.org/2000/svg",
                  "next": null,
                  "parent": [Circular],
                  "prev": Object {
                    "attribs": Object {
                      "attributeName": "r",
                      "begin": "0s",
                      "calcMode": "linear",
                      "dur": "1.2s",
                      "from": "5",
                      "repeatCount": "indefinite",
                      "to": "5",
                      "values": "5;3;5",
                    },
                    "children": Array [],
                    "name": "animate",
                    "namespace": "http://www.w3.org/2000/svg",
                    "next": [Circular],
                    "parent": [Circular],
                    "prev": null,
                    "type": "tag",
                    "x-attribsNamespace": Object {
                      "attributeName": undefined,
                      "begin": undefined,
                      "calcMode": undefined,
                      "dur": undefined,
                      "from": undefined,
                      "repeatCount": undefined,
                      "to": undefined,
                      "values": undefined,
                    },
                    "x-attribsPrefix": Object {
                      "attributeName": undefined,
                      "begin": undefined,
                      "calcMode": undefined,
                      "dur": undefined,
                      "from": undefined,
                      "repeatCount": undefined,
                      "to": undefined,
                      "values": undefined,
                    },
                  },
                  "type": "tag",
                  "x-attribsNamespace": Object {
                    "attributeName": undefined,
                    "begin": undefined,
                    "calcMode": undefined,
                    "dur": undefined,
                    "from": undefined,
                    "repeatCount": undefined,
                    "to": undefined,
                    "values": undefined,
                  },
                  "x-attribsPrefix": Object {
                    "attributeName": undefined,
                    "begin": undefined,
                    "calcMode": undefined,
                    "dur": undefined,
                    "from": undefined,
                    "repeatCount": undefined,
                    "to": undefined,
                    "values": undefined,
                  },
                },
              ],
              "name": "circle",
              "namespace": "http://www.w3.org/2000/svg",
              "next": null,
              "parent": [Circular],
              "prev": [Circular],
              "type": "tag",
              "x-attribsNamespace": Object {
                "cx": undefined,
                "cy": undefined,
                "r": undefined,
              },
              "x-attribsPrefix": Object {
                "cx": undefined,
                "cy": undefined,
                "r": undefined,
              },
            },
            "parent": [Circular],
            "prev": Object {
              "attribs": Object {
                "cx": "92.5",
                "cy": "25",
                "r": "5",
              },
              "children": Array [
                Object {
                  "attribs": Object {
                    "attributeName": "r",
                    "begin": "0s",
                    "calcMode": "linear",
                    "dur": "1.2s",
                    "from": "5",
                    "repeatCount": "indefinite",
                    "to": "5",
                    "values": "5;3;5",
                  },
                  "children": Array [],
                  "name": "animate",
                  "namespace": "http://www.w3.org/2000/svg",
                  "next": Object {
                    "attribs": Object {
                      "attributeName": "fill-opacity",
                      "begin": "0s",
                      "calcMode": "linear",
                      "dur": "1.2s",
                      "from": "0.5",
                      "repeatCount": "indefinite",
                      "to": "0.5",
                      "values": "0.5;0.2;0.5",
                    },
                    "children": Array [],
                    "name": "animate",
                    "namespace": "http://www.w3.org/2000/svg",
                    "next": null,
                    "parent": [Circular],
                    "prev": [Circular],
                    "type": "tag",
                    "x-attribsNamespace": Object {
                      "attributeName": undefined,
                      "begin": undefined,
                      "calcMode": undefined,
                      "dur": undefined,
                      "from": undefined,
                      "repeatCount": undefined,
                      "to": undefined,
                      "values": undefined,
                    },
                    "x-attribsPrefix": Object {
                      "attributeName": undefined,
                      "begin": undefined,
                      "calcMode": undefined,
                      "dur": undefined,
                      "from": undefined,
                      "repeatCount": undefined,
                      "to": undefined,
                      "values": undefined,
                    },
                  },
                  "parent": [Circular],
                  "prev": null,
                  "type": "tag",
                  "x-attribsNamespace": Object {
                    "attributeName": undefined,
                    "begin": undefined,
                    "calcMode": undefined,
                    "dur": undefined,
                    "from": undefined,
                    "repeatCount": undefined,
                    "to": undefined,
                    "values": undefined,
                  },
                  "x-attribsPrefix": Object {
                    "attributeName": undefined,
                    "begin": undefined,
                    "calcMode": undefined,
                    "dur": undefined,
                    "from": undefined,
                    "repeatCount": undefined,
                    "to": undefined,
                    "values": undefined,
                  },
                },
                Object {
                  "attribs": Object {
                    "attributeName": "fill-opacity",
                    "begin": "0s",
                    "calcMode": "linear",
                    "dur": "1.2s",
                    "from": "0.5",
                    "repeatCount": "indefinite",
                    "to": "0.5",
                    "values": "0.5;0.2;0.5",
                  },
                  "children": Array [],
                  "name": "animate",
                  "namespace": "http://www.w3.org/2000/svg",
                  "next": null,
                  "parent": [Circular],
                  "prev": Object {
                    "attribs": Object {
                      "attributeName": "r",
                      "begin": "0s",
                      "calcMode": "linear",
                      "dur": "1.2s",
                      "from": "5",
                      "repeatCount": "indefinite",
                      "to": "5",
                      "values": "5;3;5",
                    },
                    "children": Array [],
                    "name": "animate",
                    "namespace": "http://www.w3.org/2000/svg",
                    "next": [Circular],
                    "parent": [Circular],
                    "prev": null,
                    "type": "tag",
                    "x-attribsNamespace": Object {
                      "attributeName": undefined,
                      "begin": undefined,
                      "calcMode": undefined,
                      "dur": undefined,
                      "from": undefined,
                      "repeatCount": undefined,
                      "to": undefined,
                      "values": undefined,
                    },
                    "x-attribsPrefix": Object {
                      "attributeName": undefined,
                      "begin": undefined,
                      "calcMode": undefined,
                      "dur": undefined,
                      "from": undefined,
                      "repeatCount": undefined,
                      "to": undefined,
                      "values": undefined,
                    },
                  },
                  "type": "tag",
                  "x-attribsNamespace": Object {
                    "attributeName": undefined,
                    "begin": undefined,
                    "calcMode": undefined,
                    "dur": undefined,
                    "from": undefined,
                    "repeatCount": undefined,
                    "to": undefined,
                    "values": undefined,
                  },
                  "x-attribsPrefix": Object {
                    "attributeName": undefined,
                    "begin": undefined,
                    "calcMode": undefined,
                    "dur": undefined,
                    "from": undefined,
                    "repeatCount": undefined,
                    "to": undefined,
                    "values": undefined,
                  },
                },
              ],
              "name": "circle",
              "namespace": "http://www.w3.org/2000/svg",
              "next": [Circular],
              "parent": [Circular],
              "prev": null,
              "type": "tag",
              "x-attribsNamespace": Object {
                "cx": undefined,
                "cy": undefined,
                "r": undefined,
              },
              "x-attribsPrefix": Object {
                "cx": undefined,
                "cy": undefined,
                "r": undefined,
              },
            },
            "type": "tag",
            "x-attribsNamespace": Object {
              "cx": undefined,
              "cy": undefined,
              "fill-opacity": undefined,
              "r": undefined,
            },
            "x-attribsPrefix": Object {
              "cx": undefined,
              "cy": undefined,
              "fill-opacity": undefined,
              "r": undefined,
            },
          },
          Object {
            "attribs": Object {
              "cx": "112.5",
              "cy": "25",
              "r": "5",
            },
            "children": Array [
              Object {
                "attribs": Object {
                  "attributeName": "r",
                  "begin": "0s",
                  "calcMode": "linear",
                  "dur": "1.2s",
                  "from": "5",
                  "repeatCount": "indefinite",
                  "to": "5",
                  "values": "5;3;5",
                },
                "children": Array [],
                "name": "animate",
                "namespace": "http://www.w3.org/2000/svg",
                "next": Object {
                  "attribs": Object {
                    "attributeName": "fill-opacity",
                    "begin": "0s",
                    "calcMode": "linear",
                    "dur": "1.2s",
                    "from": "0.5",
                    "repeatCount": "indefinite",
                    "to": "0.5",
                    "values": "0.5;0.2;0.5",
                  },
                  "children": Array [],
                  "name": "animate",
                  "namespace": "http://www.w3.org/2000/svg",
                  "next": null,
                  "parent": [Circular],
                  "prev": [Circular],
                  "type": "tag",
                  "x-attribsNamespace": Object {
                    "attributeName": undefined,
                    "begin": undefined,
                    "calcMode": undefined,
                    "dur": undefined,
                    "from": undefined,
                    "repeatCount": undefined,
                    "to": undefined,
                    "values": undefined,
                  },
                  "x-attribsPrefix": Object {
                    "attributeName": undefined,
                    "begin": undefined,
                    "calcMode": undefined,
                    "dur": undefined,
                    "from": undefined,
                    "repeatCount": undefined,
                    "to": undefined,
                    "values": undefined,
                  },
                },
                "parent": [Circular],
                "prev": null,
                "type": "tag",
                "x-attribsNamespace": Object {
                  "attributeName": undefined,
                  "begin": undefined,
                  "calcMode": undefined,
                  "dur": undefined,
                  "from": undefined,
                  "repeatCount": undefined,
                  "to": undefined,
                  "values": undefined,
                },
                "x-attribsPrefix": Object {
                  "attributeName": undefined,
                  "begin": undefined,
                  "calcMode": undefined,
                  "dur": undefined,
                  "from": undefined,
                  "repeatCount": undefined,
                  "to": undefined,
                  "values": undefined,
                },
              },
              Object {
                "attribs": Object {
                  "attributeName": "fill-opacity",
                  "begin": "0s",
                  "calcMode": "linear",
                  "dur": "1.2s",
                  "from": "0.5",
                  "repeatCount": "indefinite",
                  "to": "0.5",
                  "values": "0.5;0.2;0.5",
                },
                "children": Array [],
                "name": "animate",
                "namespace": "http://www.w3.org/2000/svg",
                "next": null,
                "parent": [Circular],
                "prev": Object {
                  "attribs": Object {
                    "attributeName": "r",
                    "begin": "0s",
                    "calcMode": "linear",
                    "dur": "1.2s",
                    "from": "5",
                    "repeatCount": "indefinite",
                    "to": "5",
                    "values": "5;3;5",
                  },
                  "children": Array [],
                  "name": "animate",
                  "namespace": "http://www.w3.org/2000/svg",
                  "next": [Circular],
                  "parent": [Circular],
                  "prev": null,
                  "type": "tag",
                  "x-attribsNamespace": Object {
                    "attributeName": undefined,
                    "begin": undefined,
                    "calcMode": undefined,
                    "dur": undefined,
                    "from": undefined,
                    "repeatCount": undefined,
                    "to": undefined,
                    "values": undefined,
                  },
                  "x-attribsPrefix": Object {
                    "attributeName": undefined,
                    "begin": undefined,
                    "calcMode": undefined,
                    "dur": undefined,
                    "from": undefined,
                    "repeatCount": undefined,
                    "to": undefined,
                    "values": undefined,
                  },
                },
                "type": "tag",
                "x-attribsNamespace": Object {
                  "attributeName": undefined,
                  "begin": undefined,
                  "calcMode": undefined,
                  "dur": undefined,
                  "from": undefined,
                  "repeatCount": undefined,
                  "to": undefined,
                  "values": undefined,
                },
                "x-attribsPrefix": Object {
                  "attributeName": undefined,
                  "begin": undefined,
                  "calcMode": undefined,
                  "dur": undefined,
                  "from": undefined,
                  "repeatCount": undefined,
                  "to": undefined,
                  "values": undefined,
                },
              },
            ],
            "name": "circle",
            "namespace": "http://www.w3.org/2000/svg",
            "next": null,
            "parent": [Circular],
            "prev": Object {
              "attribs": Object {
                "cx": "102.5",
                "cy": "25",
                "fill-opacity": "0.5",
                "r": "3",
              },
              "children": Array [
                Object {
                  "attribs": Object {
                    "attributeName": "r",
                    "begin": "0s",
                    "calcMode": "linear",
                    "dur": "1.2s",
                    "from": "3",
                    "repeatCount": "indefinite",
                    "to": "3",
                    "values": "3;5;3",
                  },
                  "children": Array [],
                  "name": "animate",
                  "namespace": "http://www.w3.org/2000/svg",
                  "next": Object {
                    "attribs": Object {
                      "attributeName": "fill-opacity",
                      "begin": "0s",
                      "calcMode": "linear",
                      "dur": "1.2s",
                      "from": "0.2",
                      "repeatCount": "indefinite",
                      "to": "0.2",
                      "values": "0.2;0.5;0.2",
                    },
                    "children": Array [],
                    "name": "animate",
                    "namespace": "http://www.w3.org/2000/svg",
                    "next": null,
                    "parent": [Circular],
                    "prev": [Circular],
                    "type": "tag",
                    "x-attribsNamespace": Object {
                      "attributeName": undefined,
                      "begin": undefined,
                      "calcMode": undefined,
                      "dur": undefined,
                      "from": undefined,
                      "repeatCount": undefined,
                      "to": undefined,
                      "values": undefined,
                    },
                    "x-attribsPrefix": Object {
                      "attributeName": undefined,
                      "begin": undefined,
                      "calcMode": undefined,
                      "dur": undefined,
                      "from": undefined,
                      "repeatCount": undefined,
                      "to": undefined,
                      "values": undefined,
                    },
                  },
                  "parent": [Circular],
                  "prev": null,
                  "type": "tag",
                  "x-attribsNamespace": Object {
                    "attributeName": undefined,
                    "begin": undefined,
                    "calcMode": undefined,
                    "dur": undefined,
                    "from": undefined,
                    "repeatCount": undefined,
                    "to": undefined,
                    "values": undefined,
                  },
                  "x-attribsPrefix": Object {
                    "attributeName": undefined,
                    "begin": undefined,
                    "calcMode": undefined,
                    "dur": undefined,
                    "from": undefined,
                    "repeatCount": undefined,
                    "to": undefined,
                    "values": undefined,
                  },
                },
                Object {
                  "attribs": Object {
                    "attributeName": "fill-opacity",
                    "begin": "0s",
                    "calcMode": "linear",
                    "dur": "1.2s",
                    "from": "0.2",
                    "repeatCount": "indefinite",
                    "to": "0.2",
                    "values": "0.2;0.5;0.2",
                  },
                  "children": Array [],
                  "name": "animate",
                  "namespace": "http://www.w3.org/2000/svg",
                  "next": null,
                  "parent": [Circular],
                  "prev": Object {
                    "attribs": Object {
                      "attributeName": "r",
                      "begin": "0s",
                      "calcMode": "linear",
                      "dur": "1.2s",
                      "from": "3",
                      "repeatCount": "indefinite",
                      "to": "3",
                      "values": "3;5;3",
                    },
                    "children": Array [],
                    "name": "animate",
                    "namespace": "http://www.w3.org/2000/svg",
                    "next": [Circular],
                    "parent": [Circular],
                    "prev": null,
                    "type": "tag",
                    "x-attribsNamespace": Object {
                      "attributeName": undefined,
                      "begin": undefined,
                      "calcMode": undefined,
                      "dur": undefined,
                      "from": undefined,
                      "repeatCount": undefined,
                      "to": undefined,
                      "values": undefined,
                    },
                    "x-attribsPrefix": Object {
                      "attributeName": undefined,
                      "begin": undefined,
                      "calcMode": undefined,
                      "dur": undefined,
                      "from": undefined,
                      "repeatCount": undefined,
                      "to": undefined,
                      "values": undefined,
                    },
                  },
                  "type": "tag",
                  "x-attribsNamespace": Object {
                    "attributeName": undefined,
                    "begin": undefined,
                    "calcMode": undefined,
                    "dur": undefined,
                    "from": undefined,
                    "repeatCount": undefined,
                    "to": undefined,
                    "values": undefined,
                  },
                  "x-attribsPrefix": Object {
                    "attributeName": undefined,
                    "begin": undefined,
                    "calcMode": undefined,
                    "dur": undefined,
                    "from": undefined,
                    "repeatCount": undefined,
                    "to": undefined,
                    "values": undefined,
                  },
                },
              ],
              "name": "circle",
              "namespace": "http://www.w3.org/2000/svg",
              "next": [Circular],
              "parent": [Circular],
              "prev": Object {
                "attribs": Object {
                  "cx": "92.5",
                  "cy": "25",
                  "r": "5",
                },
                "children": Array [
                  Object {
                    "attribs": Object {
                      "attributeName": "r",
                      "begin": "0s",
                      "calcMode": "linear",
                      "dur": "1.2s",
                      "from": "5",
                      "repeatCount": "indefinite",
                      "to": "5",
                      "values": "5;3;5",
                    },
                    "children": Array [],
                    "name": "animate",
                    "namespace": "http://www.w3.org/2000/svg",
                    "next": Object {
                      "attribs": Object {
                        "attributeName": "fill-opacity",
                        "begin": "0s",
                        "calcMode": "linear",
                        "dur": "1.2s",
                        "from": "0.5",
                        "repeatCount": "indefinite",
                        "to": "0.5",
                        "values": "0.5;0.2;0.5",
                      },
                      "children": Array [],
                      "name": "animate",
                      "namespace": "http://www.w3.org/2000/svg",
                      "next": null,
                      "parent": [Circular],
                      "prev": [Circular],
                      "type": "tag",
                      "x-attribsNamespace": Object {
                        "attributeName": undefined,
                        "begin": undefined,
                        "calcMode": undefined,
                        "dur": undefined,
                        "from": undefined,
                        "repeatCount": undefined,
                        "to": undefined,
                        "values": undefined,
                      },
                      "x-attribsPrefix": Object {
                        "attributeName": undefined,
                        "begin": undefined,
                        "calcMode": undefined,
                        "dur": undefined,
                        "from": undefined,
                        "repeatCount": undefined,
                        "to": undefined,
                        "values": undefined,
                      },
                    },
                    "parent": [Circular],
                    "prev": null,
                    "type": "tag",
                    "x-attribsNamespace": Object {
                      "attributeName": undefined,
                      "begin": undefined,
                      "calcMode": undefined,
                      "dur": undefined,
                      "from": undefined,
                      "repeatCount": undefined,
                      "to": undefined,
                      "values": undefined,
                    },
                    "x-attribsPrefix": Object {
                      "attributeName": undefined,
                      "begin": undefined,
                      "calcMode": undefined,
                      "dur": undefined,
                      "from": undefined,
                      "repeatCount": undefined,
                      "to": undefined,
                      "values": undefined,
                    },
                  },
                  Object {
                    "attribs": Object {
                      "attributeName": "fill-opacity",
                      "begin": "0s",
                      "calcMode": "linear",
                      "dur": "1.2s",
                      "from": "0.5",
                      "repeatCount": "indefinite",
                      "to": "0.5",
                      "values": "0.5;0.2;0.5",
                    },
                    "children": Array [],
                    "name": "animate",
                    "namespace": "http://www.w3.org/2000/svg",
                    "next": null,
                    "parent": [Circular],
                    "prev": Object {
                      "attribs": Object {
                        "attributeName": "r",
                        "begin": "0s",
                        "calcMode": "linear",
                        "dur": "1.2s",
                        "from": "5",
                        "repeatCount": "indefinite",
                        "to": "5",
                        "values": "5;3;5",
                      },
                      "children": Array [],
                      "name": "animate",
                      "namespace": "http://www.w3.org/2000/svg",
                      "next": [Circular],
                      "parent": [Circular],
                      "prev": null,
                      "type": "tag",
                      "x-attribsNamespace": Object {
                        "attributeName": undefined,
                        "begin": undefined,
                        "calcMode": undefined,
                        "dur": undefined,
                        "from": undefined,
                        "repeatCount": undefined,
                        "to": undefined,
                        "values": undefined,
                      },
                      "x-attribsPrefix": Object {
                        "attributeName": undefined,
                        "begin": undefined,
                        "calcMode": undefined,
                        "dur": undefined,
                        "from": undefined,
                        "repeatCount": undefined,
                        "to": undefined,
                        "values": undefined,
                      },
                    },
                    "type": "tag",
                    "x-attribsNamespace": Object {
                      "attributeName": undefined,
                      "begin": undefined,
                      "calcMode": undefined,
                      "dur": undefined,
                      "from": undefined,
                      "repeatCount": undefined,
                      "to": undefined,
                      "values": undefined,
                    },
                    "x-attribsPrefix": Object {
                      "attributeName": undefined,
                      "begin": undefined,
                      "calcMode": undefined,
                      "dur": undefined,
                      "from": undefined,
                      "repeatCount": undefined,
                      "to": undefined,
                      "values": undefined,
                    },
                  },
                ],
                "name": "circle",
                "namespace": "http://www.w3.org/2000/svg",
                "next": [Circular],
                "parent": [Circular],
                "prev": null,
                "type": "tag",
                "x-attribsNamespace": Object {
                  "cx": undefined,
                  "cy": undefined,
                  "r": undefined,
                },
                "x-attribsPrefix": Object {
                  "cx": undefined,
                  "cy": undefined,
                  "r": undefined,
                },
              },
              "type": "tag",
              "x-attribsNamespace": Object {
                "cx": undefined,
                "cy": undefined,
                "fill-opacity": undefined,
                "r": undefined,
              },
              "x-attribsPrefix": Object {
                "cx": undefined,
                "cy": undefined,
                "fill-opacity": undefined,
                "r": undefined,
              },
            },
            "type": "tag",
            "x-attribsNamespace": Object {
              "cx": undefined,
              "cy": undefined,
              "r": undefined,
            },
            "x-attribsPrefix": Object {
              "cx": undefined,
              "cy": undefined,
              "r": undefined,
            },
          },
        ],
        "name": "g",
        "namespace": "http://www.w3.org/2000/svg",
        "next": null,
        "parent": [Circular],
        "prev": null,
        "type": "tag",
        "x-attribsNamespace": Object {},
        "x-attribsPrefix": Object {},
      },
    ],
    "name": "svg",
    "namespace": "http://www.w3.org/2000/svg",
    "next": null,
    "parent": null,
    "prev": null,
    "root": Object {
      "attribs": Object {},
      "children": Array [
        [Circular],
      ],
      "name": "root",
      "namespace": "http://www.w3.org/1999/xhtml",
      "next": null,
      "parent": null,
      "prev": null,
      "type": "root",
      "x-attribsNamespace": Object {},
      "x-attribsPrefix": Object {},
    },
    "type": "tag",
    "x-attribsNamespace": Object {
      "class": undefined,
      "height": undefined,
      "viewBox": undefined,
      "width": undefined,
    },
    "x-attribsPrefix": Object {
      "class": undefined,
      "height": undefined,
      "viewBox": undefined,
      "width": undefined,
    },
  },
  "_root": [Circular],
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "normalizeWhitespace": false,
    "withDomLvl1": true,
    "xml": false,
  },
}
`;

exports[`TrendingGraph no data 1`] = `
initialize {
  "0": Object {
    "attribs": Object {
      "class": "trending_graph",
      "height": "50",
      "viewBox": "0 0 200 50",
      "width": "200",
    },
    "children": Array [],
    "name": "svg",
    "namespace": "http://www.w3.org/2000/svg",
    "next": null,
    "parent": null,
    "prev": null,
    "root": Object {
      "attribs": Object {},
      "children": Array [
        [Circular],
      ],
      "name": "root",
      "namespace": "http://www.w3.org/1999/xhtml",
      "next": null,
      "parent": null,
      "prev": null,
      "type": "root",
      "x-attribsNamespace": Object {},
      "x-attribsPrefix": Object {},
    },
    "type": "tag",
    "x-attribsNamespace": Object {
      "class": undefined,
      "height": undefined,
      "viewBox": undefined,
      "width": undefined,
    },
    "x-attribsPrefix": Object {
      "class": undefined,
      "height": undefined,
      "viewBox": undefined,
      "width": undefined,
    },
  },
  "_root": [Circular],
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "normalizeWhitespace": false,
    "withDomLvl1": true,
    "xml": false,
  },
}
`;
